--- a/ieee754_styles.css
+++ b/ieee754_styles.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    max-width: 601px;
+    max-width: 602px;
     background-image: linear-gradient(to bottom, #E1EBF6, #E1EBF6);
     padding: 12px;
 }
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: row;
     gap: 8px;
+    flex-wrap: wrap;
 }
 
 #normalized-section {
