--- a/w7_styles.css
+++ b/w7_styles.css
@@ -2,9 +2,11 @@ body {
     --text-color: #1E395B;
     --border: 1px solid #8696AA;
     --border-radius: 2px;
+    --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    --font-size: 12px;
 
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 12px;
+    font-family: var(--font-family);
+    font-size: var(--font-size);
     color: var(--text-color);
 }
 
@@ -27,8 +29,10 @@ input[type="text"] {
     height: 20px;
     font-family: monospace;
     font-size: 13px;
+    font-weight: 600;
     text-align: center;
     background-image: linear-gradient(to bottom, #E6EFFA, #FFFFFF);
+    color: black;
 }
 
 .checkboxes-group, .buttons-group {
@@ -74,8 +78,10 @@ input[type="text"] {
 button {
     border: var(--border);
     border-radius: var(--border-radius);
-    color: #1E395B;
+    color: var(--text-color);
     cursor: pointer;
+    font-family: var(--font-family);
+    font-size: var(--font-size);
 }
 
 .usual-button {
