universal behaviour for all bit layout types

--- a/ieee754_styles.css
+++ b/ieee754_styles.css
@@ -38,8 +38,9 @@
     justify-content: space-around;
 }
 
-#input-fields-row-flow {
+.input-fields-row-flow {
     display: flex;
     flex-direction: row;
     align-content: stretch;
+    /* flex-wrap: wrap; */
 }
