--- a/ieee754_styles.css
+++ b/ieee754_styles.css
@@ -5,6 +5,8 @@
     max-width: 602px;
     background-image: linear-gradient(to bottom, #E1EBF6, #E1EBF6);
     padding: 12px;
+    border: 1px solid #005FB844;
+    border-radius: 4px;
 }
 
 #upper-flow {
@@ -30,6 +32,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    gap: 8px;
 }
 
 #copy-buttons-flow {
