--- a/w7_styles.css
+++ b/w7_styles.css
@@ -25,6 +25,7 @@ input[type="text"] {
     border: var(--border);
     border-radius: var(--border-radius);
     outline: none;
+    min-width: 45px;
     width: 100%;
     height: 20px;
     font-family: monospace;
